
# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.

[metadata]
name = rqalpha_mod_vnpy
version = 0.10.0

[versioneer]
VCS = git
style = pep440-ricequant
versionfile_source = rqalpha_mod_vnpy/_version.py
versionfile_build = rqalpha_mod_vnpy/_version.py
tag_prefix =
parentdir_prefix = rqalpha_mod_vnpy

